--- a/non-graded ex 3.ipynb
+++ b/non-graded ex 3.ipynb
@@ -24,18 +24,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your distance from the treasure is: 6\n",
+      ". . . . . \n",
+      ". P . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [1, 1]\n",
+      "\n",
+      "You are getting closer!\n",
+      "Moves remaining: 9\n",
+      ". . . . . \n",
+      ". . P . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [1, 2]\n",
+      "\n",
+      "You are getting closer!\n",
+      "Moves remaining: 8\n",
+      ". . . . . \n",
+      ". . . P . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [1, 3]\n",
+      "\n",
+      "You are getting closer!\n",
+      "Moves remaining: 7\n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [1, 4]\n",
+      "\n",
+      "Illegal move! You've reached the boundary or entered an invalid direction.\n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [1, 4]\n",
+      "\n",
+      "You are getting closer!\n",
+      "Moves remaining: 6\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [2, 4]\n",
+      "\n",
+      "Illegal move! You've reached the boundary or entered an invalid direction.\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [2, 4]\n",
+      "\n",
+      "Illegal move! You've reached the boundary or entered an invalid direction.\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [2, 4]\n",
+      "\n",
+      "Illegal move! You've reached the boundary or entered an invalid direction.\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      "Player's current position: [2, 4]\n",
+      "\n",
+      "You are getting closer!\n",
+      "Moves remaining: 5\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      "Player's current position: [3, 4]\n",
+      "\n",
+      "You are getting closer!\n",
+      "Congratulations! You've found the treasure!\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      "Player's current position: [4, 4]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
-    "\n",
+    "grid_size = 5\n",
+    "max_moves = 10\n",
     "\n",
     "player_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
-    "print(player_position)\n",
-    "treasure_position = #Same logic as above\n",
-    "\n"
+    "treasure_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
+    "\n",
+    "def calculate_distance(pos1, pos2):\n",
+    "    return abs(pos1[0] - pos2[0]) + abs(pos1[1] - pos2[1])\n",
+    "\n",
+    "def display_grid(player_pos, treasure_pos=None):\n",
+    "    for i in range(grid_size):\n",
+    "        row = \"\"\n",
+    "        for j in range(grid_size):\n",
+    "            if [i, j] == player_pos:\n",
+    "                row += \"P \"  \n",
+    "            elif treasure_pos and [i, j] == treasure_pos:\n",
+    "                row += \"T \"  \n",
+    "            else:\n",
+    "                row += \". \"  \n",
+    "        print(row)\n",
+    "    print(f\"Player's current position: {player_pos}\")\n",
+    "    print()\n",
+    "\n",
+    "initial_distance = calculate_distance(player_position, treasure_position)\n",
+    "print(f\"Your distance from the treasure is: {initial_distance}\")\n",
+    "\n",
+    "moves_made = 0\n",
+    "while moves_made < max_moves:\n",
+    "    display_grid(player_position)\n",
+    "    \n",
+    "    move = input(\"Enter a direction (N, S, E, W): \").upper()\n",
+    "    \n",
+    "    if move == \"N\" and player_position[0] > 0:\n",
+    "        player_position[0] -= 1\n",
+    "    elif move == \"S\" and player_position[0] < grid_size - 1:\n",
+    "        player_position[0] += 1\n",
+    "    elif move == \"E\" and player_position[1] < grid_size - 1:\n",
+    "        player_position[1] += 1\n",
+    "    elif move == \"W\" and player_position[1] > 0:\n",
+    "        player_position[1] -= 1\n",
+    "    else:\n",
+    "        print(\"Invaild move! You've reached the boundary or entered an invalid direction.\")\n",
+    "        continue\n",
+    "\n",
+    "    new_distance = calculate_distance(player_position, treasure_position)\n",
+    "    if new_distance < initial_distance:\n",
+    "        print(\"You are getting closer!\")\n",
+    "    elif new_distance > initial_distance:\n",
+    "        print(\"You are moving farther away!\")\n",
+    "    else:\n",
+    "        print(\"Distance remains the same.\")\n",
+    "\n",
+    "    if player_position == treasure_position:\n",
+    "        print(\"Congratulations! You've found the treasure!\")\n",
+    "        display_grid(player_position)\n",
+    "        break\n",
+    "\n",
+    "    initial_distance = new_distance\n",
+    "    moves_made += 1\n",
+    "    print(f\"Moves remaining: {max_moves - moves_made}\")\n",
+    "\n",
+    "if moves_made == max_moves and player_position != treasure_position:\n",
+    "    print(f\"Game over! The treasure was at: {treasure_position}\")\n",
+    "    display_grid(player_position, treasure_position)\n"
    ]
   }
  ],
@@ -55,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
